k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stayfinder
  namespace: stayfinder
spec:
  replicas: 2

  selector:
    matchLabels:
      app: stayfinder

  template:
    metadata:
      labels:
        app: stayfinder

    spec:
      containers:
      - name: stayfinder

        image: devaraj74/stayfinder-py:15

        imagePullPolicy: Always

        ports:
        - containerPort: 4000
