k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stayfinder-service
  namespace: stayfinder

spec:
  selector:
    app: stayfinder

  ports:
    - port: 80
      targetPort: 4000

  type: ClusterIP
